{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "47c51630-443f-436b-88b8-32d94e42c803",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "60630794-6d0d-4228-98a2-9ed4706f0c9c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "2893b273-a606-40e2-95a1-8a522a400d67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "47699dfb-78f4-4915-964a-1ecc7a3d05f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireBullet",
                    "type": "Button",
                    "id": "e5332d7c-63a9-420b-93db-293d1d1b1041",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ColdBullet",
                    "type": "Button",
                    "id": "bed980ec-2bf3-4855-b8c7-2995c2fbe0ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrongShoot",
                    "type": "Button",
                    "id": "a85b6957-7ed7-495b-85a6-da892cbbd298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d66a1c6-11fc-47d1-a8a6-284be9f64fca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2d7ce76-2733-4693-b01a-3ce6fadfa942",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06b54411-0cb8-465c-8b15-c1dd914a3f95",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "FireBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d858b8f5-2c02-478e-8b3e-5f57d0dabf37",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "StrongShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "96f4564c-f387-4a1e-a56f-7de63e0793d7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d74f5448-800c-4a92-ae03-087fa6c990ba",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "81d61c4e-b638-4ce7-9a49-16fa410b9021",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "908f21f7-cdf9-4bba-ace7-1367b7cf5b93",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a0213cdd-17e9-462e-8b32-6c153a64c599",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8bd4618b-b116-4a13-8150-874f90fb17f6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "ColdBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and mouse",
            "bindingGroup": "Keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}